--- a/src/components/forms/registrationFormStyles.css
+++ b/src/components/forms/registrationFormStyles.css
@@ -22,15 +22,19 @@
 }
 
 .submit-button {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 40px;
+  margin-bottom: 40px;
   width: 100%;
   font-size: 20px;
   padding: 15px;
+  padding-top: 18px;
   border: none;
   color: white;
   border-radius: 3px;
   text-transform: uppercase;
+  cursor: pointer;
+  outline: none !important;
+
   background: rgba(65,181,231,1);
   background: -moz-linear-gradient(-45deg, rgba(65,181,231,1) 0%, rgba(15,142,219,1) 100%);
   background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(65,181,231,1)), color-stop(100%, rgba(15,142,219,1)));
@@ -47,4 +51,5 @@
 
 .login-prompt span {
   color: #41B4E7;
+  cursor: pointer;
 }
