--- a/src/components/form-container/formContainerStyles.css
+++ b/src/components/form-container/formContainerStyles.css
@@ -1,9 +1,9 @@
 .forms-container {
-  padding: 0px 130px !important;
   text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .forms-container h2 {
